Archive2/ba/b609134414d220/output
main.cpp: In function 'test':
main.cpp:1:16: warning: unused parameter 'x' [-Wunused-parameter]
 void test(int *x)
                ^
main.cpp: In function 'main':
main.cpp:8:5: error: passing argument 1 of 'test' from incompatible pointer type
     test(x);
     ^
main.cpp:1:6: note: expected 'int *' but argument is of type 'char *'
 void test(int *x)
      ^
